# crisp_gym

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  pixi.toml  pyproject.toml  test.py
.github/workflows/: pixi_ci.yml  release.yml
config/: train_dp.json
crisp_gym/: __init__.py  env_wrapper.py  lerobot_wrapper.py  manipulator_env.py  manipulator_env_config.py
crisp_gym/config/: home.py  path.py
crisp_gym/config/envs/: ft_right_aloha_franka.yaml  hacked_right_aloha_franka.yaml  left_aloha_franka.yaml  left_robot_env.yaml  no_cam_franka.yaml  only_wrist_cam_franka.yaml  right_aloha_franka.yaml  right_aloha_franka_dual_cam.yaml  right_anyoha_franka.yaml  right_robot_env.yaml  simple_anyskin.yaml  simple_cam.yaml  yi_setup.yaml
crisp_gym/config/grippers/: gripper_left_v2.yaml  gripper_right_v2.yaml
crisp_gym/config/policy/: 0_default_config.yaml  1_async_default_config.yaml
crisp_gym/config/teleop/: my_teleop.yaml  (+3 more)
crisp_gym/envs/: __init__.py  env_wrapper.py  manipulator_env.py  manipulator_env_config.py
crisp_gym/policy/: __init__.py  async_lerobot_policy.py  lerobot_policy.py  peft_lerobot_policy.py  policy.py
crisp_gym/record/: bag_recorder.py  evaluate.py  record_functions.py  recording_manager.py  recording_manager_config.py
crisp_gym/scripts/: check_available_policies.py  check_config.py  deploy_policies_ab_test.py  deploy_policy.py  deploy_policy_peft.py  leader_follower_teleop.py  record_lerobot_format_leader_follower.py
crisp_gym/teleop/: teleop_robot.py  teleop_robot_config.py  teleop_sensor_stream.py
crisp_gym/util/: __init__.py  control_type.py  gripper_mode.py  lerobot_features.py  prompt.py  rl_utils.py  setup_logger.py
examples/: 00_gym_cartesian_env.py  01_gym_joint_env.py  02_gym_wrapper.py  03_env_leader_follower.py  03_leader_follower_teleop.py  04_get_lerobot_features.py  05_test_env.py  06_test_teleop.py  07_test_teleop_streamed.py  08_example_mcap_to_lerobot.py  08_test_receive.py  08_test_receive_iceoryx.py  09_check_mocap.py  09_test_send_iceoryx.py  20_infinite_circle.py  21_gravity_compensation.py  _00_test_cartesian_env.py  a1_cli_teleop.py  a2_playback_cli_teleop.py  a3_playback_cli_teleop_alternating.py  test_bag.sh
helpers/: convert_gripper_to_binary_actions.py  fix_rotation_vectors_in_dataset.py  relative_actions_to_absolute_actions_dataset.py  remove_features_from_dataset.py
scripts/: check_config.py  configure.sh  cyclone_config.xml  delete_zero_actions.py  deploy_lerobot_policy.py  deploy_policy.py  leader_follower_teleop.py  phone_teleop.py  push_data_set_to_hub.py  record_lerobot_format.py  record_lerobot_format_leader_follower.py  record_lerobot_format_leader_follower_debug.py  record_lerobot_full_teleop.py  set_cyclone.sh  simplify_trajectory.py  visualiza_dataset.py  visualize_actions_vs_dataset.py  visualize_actions_vs_dataset_error.py
scripts/dataset_conversions/: convert_gripper_to_binary_actions.py  fix_rotation_vectors_in_dataset.py  relative_actions_to_absolute_actions_dataset.py  remove_features_from_dataset.py
scripts/mock/: dual_camera.sh  fake_camera.py
(+6 files in other folders)
