[project]
name = "crisp-gym"
version = "3.2.3"
description = "Simple gymnasium environments for crisp_py"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ruff>=0.11.9",
    "gymnasium>=0.26.3,<2",
    "scipy>=1.15.2,<2",
    "crisp_python>=3.0.0,<4",
    "rich>=14.0.0, <15",
]
authors = [
    {name="Maximilian Dösch", email="doesch.maximilian@gmail.com"},
    {name="Daniel San Jose Pro", email="sanjose.daniel@gmail.com"},
]

[project.scripts]
crisp-deploy-policy = "crisp_gym.scripts.deploy_policy:main"
crisp-record-leader-follower = "crisp_gym.scripts.record_lerobot_format_leader_follower:main"
crisp-check-config = "crisp_gym.scripts.check_config:main"

[tool.ruff]
exclude = [
    ".git",
    ".git-rewrite",
    ".ipynb_checkpoints",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "build",
    "dist",
    "site-packages",
    "venv",
]

line-length = 100
indent-width = 4
target-version = "py311"

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["config"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "D", "TCH", "ANN"]
ignore = ["ANN401"]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-annotations]
suppress-dummy-args = true
suppress-none-returning = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"
